# pandai-yard-template

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml
.github/workflows/: deploy-pages.yml
ARCHIVE/2019-rewrite-attempt/: README.md
backend-legacy/: README.md  composer.json
backend-legacy/app/controllers/: InvoiceController.php  ShipmentController.php  WarehouseController.php
backend-legacy/app/lib/: DBConnection.php  Session.php
backend-legacy/app/models/: Shipment.php  Warehouse.php
backend-legacy/public/: .htaccess  index.php
backend-legacy/sql/: legacy-oracle.sql  schema.sql
backend-modern/: README.md  pyproject.toml
backend-modern/alembic/: env.py
backend-modern/alembic/versions/: 20221103_initial.py  20231215_add_handover_table.py  20240802_partial_oracle_migration.py
backend-modern/nusantara_modern/: __init__.py  main.py
backend-modern/nusantara_modern/db/: __init__.py  models.py
backend-modern/nusantara_modern/routers/: __init__.py  handover.py  tracking.py
backend-modern/nusantara_modern/services/: __init__.py  ports_integration.py
backend-modern/tests/: test_tracking.py
data/: README.md
data/notebooks/: monthly-shipment-analysis.ipynb
data/pipelines/: pyproject.toml  shipment_etl.py
data/sql/: monthly_kpi.sql
docs/: 00-WELCOME-bu-sari.md  01-tech-overview.md  02-deployment.md  03-on-call.md  04-the-oracle-migration.md
docs/adrs/: 0001-why-php-still.md  0002-react-native-pivot.md  0003-postgres-migration.md
frontend-admin/: README.md  package.json
frontend-admin/public/: index.html
frontend-admin/src/: App.js  index.js
frontend-admin/src/api/: client.js
frontend-admin/src/pages/: Dashboard.js  ShipmentList.js
frontend-customer-portal/: README.md  next.config.mjs  package.json
frontend-customer-portal/app/: layout.tsx  page.tsx
frontend-customer-portal/app/tracking/[awb]/: demo-data.ts  page.tsx
frontend-customer-portal/components/: TrackingTimeline.tsx
infrastructure/: README.md  docker-compose.yml  nginx.conf
infrastructure/deployment/: titan-prod.md
infrastructure/deployment/ansible/: README.md
mobile/: App.tsx  README.md  package.json
mobile/src/screens/: HomeScreen.tsx  TrackingScreen.tsx
mobile/src/services/: api.ts
