[tool.poetry]
name = "nusantara-modern"
version = "0.7.3"
description = "PT Nusantara Logistics — modern backend (Python/FastAPI). New work goes here."
authors = ["Tim Engineering <eng@nusantara.example>"]
license = "Proprietary"
readme = "README.md"
packages = [{ include = "nusantara_modern" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.27.0" }
pydantic = "^2.6.0"
pydantic-settings = "^2.2.0"
sqlalchemy = { extras = ["asyncio"], version = "^2.0.27" }
asyncpg = "^0.29.0"
alembic = "^1.13.1"
httpx = "^0.27.0"
redis = "^5.0.1"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
structlog = "^24.1.0"
sentry-sdk = "^1.40.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.0"
pytest-cov = "^4.1.0"
respx = "^0.20.2"        # for mocking httpx in tests
ruff = "^0.3.0"
mypy = "^1.9.0"
faker = "^24.0.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires postgres + redis (slow)",
    "legacy: hits backend-legacy (very slow, flaky)",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "UP", "RUF"]
ignore = [
    "E501",   # line too long — pragmatic for now
    "B008",   # FastAPI Depends() in default args is the recommended pattern
]

[tool.mypy]
python_version = "3.11"
strict = false             # TODO: turn on once we've cleaned up the legacy adapters
ignore_missing_imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
